tests/baselines/reference/invalidDoWhileBreakStatements.errors.txt
==== tests/cases/compiler/invalidDoWhileBreakStatements.ts (6 errors) ====
    // All errors
    
    // naked break not allowed
    break;
    ~~~~~~
!!! invalidDoWhileBreakStatements.ts(4,1): error TS2202: 'break' statement can only be used within an enclosing iteration or switch statement.
    
    // non-existent label
    ONE:
    do break TWO; while (true)
       ~~~~~~~~~~
!!! invalidDoWhileBreakStatements.ts(8,4): error TS2203: Jump target not found.
    
    // break from inside function
    TWO:
    do {
        var x = () => {
            break TWO;
            ~~~~~~~~~~
!!! invalidDoWhileBreakStatements.ts(14,9): error TS2204: Jump target cannot cross function boundary.
        }
    }while (true)
    
    THREE:
    do {
        var fn = function () {
            break THREE;
            ~~~~~~~~~~~~
!!! invalidDoWhileBreakStatements.ts(21,9): error TS2204: Jump target cannot cross function boundary.
        }
    }while (true)
    
    // break forward
    do {
        break FIVE;
        ~~~~~~~~~~~
!!! invalidDoWhileBreakStatements.ts(27,5): error TS2203: Jump target not found.
        FIVE:
        do { } while (true)
    }while (true)
    
    // label on non-loop statement
    NINE:
    var y = 12;
    
    do {
        break NINE;
        ~~~~~~~~~~~
!!! invalidDoWhileBreakStatements.ts(37,5): error TS2203: Jump target not found.
    }while (true)